--- a/app/panelistic2.0.1-electron.css
+++ b/app/panelistic2.0.1-electron.css
@@ -25,6 +25,10 @@ body{
 	user-select:none;
 }
 
+::selection {
+	 background: #aacccc88;
+}
+
 #panelistic_window{
 	margin: 0px;
 	height: 100%;
@@ -32,7 +36,7 @@ body{
 	bottom: 0px;
 	position: absolute;
 	color: black;
-	background-color: #ffffffaa;
+	background-color: #eeeeee99;
 }
 
 #panelistic_titlebar{
@@ -140,13 +144,13 @@ input{
 
 .panelistic_checkbox input{
 	margin-top: 5px;
-}
+}	
 
 .panelistic_checkbox_text{
 	padding-left: 7px;
 	font-size: 13px;
 	position: relative;
-	top: -1px;
+	top: -2px;
 }
 
 .panelistic_checkbox:hover{
@@ -175,6 +179,14 @@ input[type="button"]{
 
 img:not(.panelistic_controlbtn){
 	border-radius: 8px;
+}
+
+.panelistic_panel:hover{
+	box-shadow: 0 0 10px #00000022;
+}
+
+.panelistic_panel:active{
+	background-color: #ffffff55;
 }
 
 select{
@@ -213,6 +225,16 @@ select option{
 	border-radius: 8px;
 	padding: 8px;
 	color: white;
+	user-select: text;
+}
+
+.panelistic_panel{
+	background-color: #ffffff66;
+	padding: 8px;
+	border-radius: 10px;
+	margin-top: 8px;
+	margin-bottom: 8px;
+	border: solid 1px #ffffff00;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -226,9 +248,24 @@ select option{
 	#controlbtn_minbtn:active{
 		background-color: #888;
 	}
-	input{
+	input,select,.panelistic_checkbox{
 		border: 1px solid #44444499;
 		background-color: #33333388;
 		color: white;
+	}
+	.panelistic_panel{
+		background-color: #44444455;
+	}
+	.panelistic_panel:hover{
+		box-shadow: 0 0 10px #00000022;
+	}
+	.panelistic_panel:active{
+		background-color: #66666655;
+	}
+	input:hover,select:hover,.panelistic_checkbox:hover{
+		background-color: #33333388;
+	}
+	input:active,select:active,.panelistic_checkbox:active{
+		background-color: #66666655;
 	}
 }
